[metadata]
name = imglog
version = 0.0.1
description = image logging library
license = MIT
author = Takato Okajima
author_email = okajima.work@gmail.com

[options]
zip_safe = False
include_package_data = True
pakages = find:
install_requires = 
    pillow
    numpy

[options.pakage_data]
imglog.resource.html = *.html
imglog.resource.script = *.js

[options.pakages.find]
exclude =
    test
    test.*